--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: stock-management-api
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn api:app --bind 0.0.0.0:$PORT --workers 2
+    startCommand: gunicorn wsgi:app --bind 0.0.0.0:$PORT --workers 2
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
