--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ tkcalendar==1.6.1
 pyinstaller==6.3.0
 Flask-SQLAlchemy==3.1.1
 Flask-Migrate==4.0.5
-python-dotenv==1.0.1 
+python-dotenv==1.0.1
+flask-cors==4.0.0 
