--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ Flask-SQLAlchemy==3.1.1
 Flask-Migrate==4.0.5
 python-dotenv==1.0.1
 flask-cors==4.0.0
-waitress==3.0.0 
+waitress==3.0.0
+gunicorn==21.2.0 
