--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ Flask-Migrate==4.0.5
 python-dotenv==1.0.1
 flask-cors==4.0.0
 waitress==3.0.0
-gunicorn==21.2.0 
+gunicorn==21.2.0
+gevent==21.12.0 
