--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
     name: stock-management-api
     runtime: python
     buildCommand: |
+      pip install --upgrade pip
       pip install -r requirements.txt
       chmod +x start.sh
     startCommand: ./start.sh
